# dpidpo

./: .gitignore  README.md  coautoria na web of science.ipynb  main.py  pyproject.toml  requirements.txt
dpidpo/: scopus.py  wos.py
ph_tests/: Produto_C_v2.py  author_coauthors.txt  backup.py  data_frame_lattes.csv  desambig.py  edges.csv  gephi.csv  nodes.csv  produtoc.py  scopus.csv  teste.csv  teste1.csv  teste2.csv  v2.py  x_.py  x_produtoc.py  x_teste.py
ph_tests/csv/: base_teste_desamb.csv  nodes.csv
tests/: test_dpidpo.py
