[tool.poetry]
name = "dpidpo"
version = "0.1.0"
description = ""
authors = ["Aurelio Costa <arcosta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
elsapy = "^0.5.0"
dynaconf = "^2.2.3"

[tool.poetry.scripts]
my-script = "dpidpo:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
